--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore . --ignore-pattern *.demo.*",
     "lint-fix": "eslint --fix --ignore-path .gitignore --ext .js,.vue . --ignore-pattern *.demo.*",
     "e2e": "testcafe all e2e/*test* --app \"npm run dev\" --app-init-delay 10000 -S -s screenshots",
-    "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build-lib"
   },
   "lint-staged": {
     "*.js": "eslint",
